--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,15 @@
-name: Java CI
+name: CI
 on: [push]
 jobs:
-  jenkins-static-image-pipeline:
+  jfr-static-image-action-pipeline:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses:
+      - name: Jenkins pipeline in the container
+        uses:
           jenkinsci/jfr-static-image-action@master
         with:
           command: run
           jenkinsfile: Jenkinsfile
           pluginstxt: plugins.txt
+          jcasc: jcasc.yml 
